--- a/work4_flag.html
+++ b/work4_flag.html
@@ -13,7 +13,7 @@
 
         <rect x="200px" y="10px" width="450" height="100" fill="#ff9933" stroke-width="1" stroke="white" />
 
-        <rect x="200px" y="100" width="450" height="100" fill="#ffffff" storke-width="1" stork="white" />
+        <rect x="200px" y="100" width="450" height="100" fill="#ffffff" stroke-width="1" stroke="white" />
 
         <circle cx="420px" cy="150px" r="30" stroke-width="2" stroke="blue" fill="white" />
 
