--- a/work5_tree_15-6-24.html
+++ b/work5_tree_15-6-24.html
@@ -10,8 +10,8 @@
 <body>
     <svg height="500px" width="100%" style="background-color: antiquewhite">
         <polygon points="335,45,434,148,383,148,434,193,375,193,431,249,223,249,279,192,235,192,279,148,232,148,335,45"
-            fill="green" storke-width="1" storke="black" />
-        <rect x="304px" y="249px" height="70px" width="50px" fill="red" storke-width="1" storke="black" />
+            fill="green" stroke-width="2" stroke="black" />
+        <rect x="304px" y="249px" height="70px" width="50px" fill="red" stroke-width="2" stroke="black" />
     </svg>
 </body>
 
